--- a/First Website/index.html
+++ b/First Website/index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First Website</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/fontawesome.min.css">
   </head>
   <body>
     <section class="header">
       <nav>
         <a href="index.html"><img src="eduford_img/logo.png" /></a>
         <div class="nav-links">
+          <i class="fa solid fa-square-xmark"></i>
           <ul>
             <li><a href="">HOME</a></li>
             <li><a href="">ABOUT</a></li>
@@ -20,7 +25,15 @@
             <li><a href="">CONTACT</a></li>
           </ul>
         </div>
+        <i class="fa solid fa-bars"></i>
       </nav>
+
+    <div class="text-box">
+      <h1>Worlds Biggest University</h1>
+      <p>Creating websites is now one of the easiest things in the world. You just need to learn HTML, CSS, <br>Javascript and you're good to go.
+      </p>
+      <a href="" class="hero-btn">Visit us to learn more</a>
+    </div>  
     </section>
   </body>
 </html>
