--- a/First Website/index.html
+++ b/First Website/index.html
@@ -16,7 +16,7 @@
       <nav>
         <a href="index.html"><img src="eduford_img/logo.png" /></a>
         <div class="nav-links">
-          <i class="fa solid fa-square-xmark"></i>
+          <i class="fa regular fa-bars-staggered"></i>
           <ul>
             <li><a href="">HOME</a></li>
             <li><a href="">ABOUT</a></li>
@@ -35,5 +35,30 @@
       <a href="" class="hero-btn">Visit us to learn more</a>
     </div>  
     </section>
+
+<!---- course section ---->
+<section class="course">
+  <h1>Courses we offer</h1>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+  <div class="row">
+    <div class="column">
+      <h3>Intermediate</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore quas magni placeat, aliquam, in, dicta sequi incidunt beatae vitae exercitationem accusamus dignissimos earum? Nulla, velit!</p>
+    </div>
+    <div class="column">
+      <h3>Degree</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore quas magni placeat, aliquam, in, dicta sequi incidunt beatae vitae exercitationem accusamus dignissimos earum? Nulla, velit!</p>
+    </div>
+    <div class="column">
+      <h3>Post Graduation</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore quas magni placeat, aliquam, in, dicta sequi incidunt beatae vitae exercitationem accusamus dignissimos earum? Nulla, velit!</p>
+    </div>
+  </div>
+
+</section>
+
+
+
   </body>
 </html>
