--- a/First Website/index.html
+++ b/First Website/index.html
@@ -16,7 +16,6 @@
       <nav>
         <a href="index.html"><img src="eduford_img/logo.png" /></a>
         <div class="nav-links">
-          <i class="fa regular fa-bars-staggered"></i>
           <ul>
             <li><a href="">HOME</a></li>
             <li><a href="">ABOUT</a></li>
@@ -25,7 +24,6 @@
             <li><a href="">CONTACT</a></li>
           </ul>
         </div>
-        <i class="fa solid fa-bars"></i>
       </nav>
 
     <div class="text-box">
@@ -58,7 +56,111 @@
 
 </section>
 
+<!--- campus --->
 
+<section class="campus">
+<h1>Our Global Campus</h1>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+<div class="row">
+<div class="campus-col">
+  <img src="eduford_img/london.png">
+  <div class="layer">
+    <h3>LONDON</h3>
+  </div>
+</div>
+<div class="campus-col">
+  <img src="eduford_img/newyork.png">
+  <div class="layer">
+    <h3>NEW YORK</h3>
+  </div>
+</div>
+<div class="campus-col">
+  <img src="eduford_img/washington.png">
+  <div class="layer">
+    <h3>WASHINGTON</h3>
+  </div>
+</div>
+</div>
+
+</section>
+
+<!----- facilities ---->
+
+<section class="facilities">
+  <h1>Our Facilities</h1>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+<div class="row">
+<div class="facilities-col">
+<img src="eduford_img/library.png">
+<h3>World Class Library</h3>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, voluptas!</p>
+</div>
+<div class="facilities-col">
+  <img src="eduford_img/basketball.png">
+  <h3>Modern Basketball Court</h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, voluptas!</p>
+  </div>
+  <div class="facilities-col">
+    <img src="eduford_img/cafeteria.png">
+    <h3>Urban Coffee Shop</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, voluptas!</p>
+    </div>
+</div>
+</section>
+
+<!---- testimonials ---->
+
+<section class="testimonials">
+  <h1>What Our Students Say</h1>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+<div class="row">
+<div class="testimonial-col">
+  <img src="eduford_img/user1.jpg">
+  <div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda eos ab iste maiores obcaecati repudiandae nisi blanditiis, vitae cupiditate, asperiores nam amet facere a sunt!</p>
+    <h3>Nancy Pelosi</h3>
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+      <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+      <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+      <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+      <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+      <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+    </svg>
+  </div>
+</div>
+<div class="testimonial-col">
+  <img src="eduford_img/user2.jpg">
+  <div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda eos ab iste maiores obcaecati repudiandae nisi blanditiis, vitae cupiditate, asperiores nam amet facere a sunt!</p>
+    <h3>Ron Desantis</h3>
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+      <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+      <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+      <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+      <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+      <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+    </svg>
+  </div>
+</div>
+</div>
+</section>
 
   </body>
 </html>
